<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exam"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="@dimen/dp20"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_stats"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp10"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/mBtnExam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/logocolor"
                    android:text="@string/exam"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/mBtnSubject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_unselected"
                    android:text="@string/subject"
                    android:textColor="@color/logocolor" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ll_stats"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/mRlExam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp10"
                    android:background="@drawable/layout_background">

                    <Spinner
                        android:id="@+id/mSpinnerExam"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mRlStudent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp10"
                    android:background="@drawable/layout_background"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/mSpinnerSubject"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold" />

                </RelativeLayout>

                <Button
                    android:id="@+id/mBtnFetch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp20"
                    android:background="@drawable/button_selector"
                    android:text="@string/get_report"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp10" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>


